Fixed CSS Overflow Issue

--- a/css/spin-two-three.css
+++ b/css/spin-two-three.css
@@ -40,6 +40,7 @@
 				display: inline-block;
 				vertical-align: top;
 				position: relative;
+        overflow: hidden;
 			}
 
 /* horizontal */
